Refactoring code and add conection with MySQL

--- a/.docker/apache/.env-template
+++ b/.docker/apache/.env-template
@@ -1,4 +1,6 @@
 MYSQL_ROOT_PASSWORD=secretKey
+MYSQL_HOST=host
+MYSQL_TCP_PORT=3306
 MYSQL_USER=userdb
 MYSQL_PASSWORD=secretKeyUserdb
 MYSQL_DATABASE=dbname
